fixed hint 0 tries bug, add max-height and overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,8 +14,8 @@
   border-radius: 5px;
   min-width: 300px;
 
-  max-height: 400px;
-    overflow-y: auto;
+  max-height: 550px;
+  overflow-y: auto;
 }
 
 .drawing{
